welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: ';' expected but 'false' found.
while (estFaceMur) == false {
                      ^